--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name":"skynet",
-   "description":"skynet network and api",
-   "version":"0.0.4",
+   "description":"Skynet IoT network and api",
+   "version":"0.0.5",
    "homepage":"http://github.com/chrismatthieu/skynet-npm",
    "repository":"git://github.com/chrismatthieu/skynet-npm",
    "author":"Chris Matthieu <chris@matthieu.us> (http://chrismatthieu.com/)",
