--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name":"skynet",
-   "description":"Skynet IoT network and api",
-   "version":"0.0.12",
+   "description":"Skynet IoT network and API",
+   "version":"0.0.13",
    "homepage":"http://skynet.im",
    "repository":"git://github.com/skynetim/npm",
    "author":"Chris Matthieu <chris@matthieu.us> (http://chrismatthieu.com/)",
@@ -15,7 +15,8 @@
     "skynet"
    ],   
    "dependencies":{
-      "socket.io-client": "*"
+      "socket.io-client": "*",
+      "mqtt": "*"
    },
    "engines":{
       "node":">= 0.4.0"
