--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name":"skynet",
    "description":"Skynet IoT network and API",
-   "version":"0.0.25",
+   "version":"0.0.26",
    "homepage":"http://skynet.im",
    "repository":"git://github.com/skynetim/npm",
    "author":"Chris Matthieu <chris@matthieu.us> (http://chrismatthieu.com/)",
@@ -15,7 +15,7 @@
     "skynet"
    ],
    "dependencies":{
-      "socket.io-client": "*",
+      "socket.io-client": "0.9.16",
       "mqtt": "*"
    },
    "engines":{
