--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-   "name":"skynet",
-   "description":"Skynet IoT network and API",
-   "version":"0.0.47",
-   "homepage":"http://skynet.im",
-   "repository":"git://github.com/skynetim/npm",
-   "author":"Chris Matthieu <chris@matthieu.us> (http://chrismatthieu.com/)",
-   "main":"./index.js",
-   "keywords": [
+  "name": "skynet",
+  "description": "Skynet IoT network and API",
+  "version": "1.0.0",
+  "homepage": "http://skynet.im",
+  "repository": "git://github.com/skynetim/npm",
+  "author": "Chris Matthieu <chris@matthieu.us> (http://chrismatthieu.com/)",
+  "main": "./index.js",
+  "keywords": [
     "iot",
     "internet of things",
     "arduino",
     "tessel",
     "raspberrypi",
     "skynet"
-   ],
-   "dependencies":{
-      "socket.io-client": "1.0.6",
-      "mqtt": "*"
-   },
-   "engines":{
-      "node":">= 0.6.0"
-   },
-   "licenses":[
-      {
-         "type":"MIT",
-         "url":"http://github.com/skynetim/npm/raw/master/LICENSE"
-      }
-   ]
+  ],
+  "dependencies": {
+    "mqtt": "*",
+    "socket.io-client": "1.0.6"
+  },
+  "engines": {
+    "node": ">= 0.6.0"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/skynetim/npm/raw/master/LICENSE"
+    }
+  ]
 }
