--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ deploy:
       all_branches: true
 before_deploy:
   - npm install ws browserify
-  - mkdir deploy
+  - mkdir -p deploy/$TRAVIS_TAG
   - node_modules/.bin/browserify -s skynet index.js > deploy/$TRAVIS_TAG/meshblu.bundle.js
