--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Octoblu",
   "main": "./index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec"
   },
   "keywords": [
     "iot",
@@ -32,8 +32,11 @@
   ],
   "devDependencies": {
     "chai": "^1.10.0",
+    "codeclimate-test-reporter": "0.0.4",
     "coffee-script": "^1.8.0",
+    "istanbul": "^0.3.5",
     "mocha": "^2.1.0",
+    "mocha-istanbul": "^0.2.0",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.6.0"
   }
