--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meshblu",
   "description": "Meshblu IoT network and API",
-  "version": "1.19.0",
+  "version": "1.19.1",
   "homepage": "http://developer.octoblu.com",
   "repository": "git://github.com/octoblu/npm",
   "author": "Octoblu",
@@ -20,8 +20,8 @@
   "dependencies": {
     "debug": "^2.1.1",
     "json-stable-stringify": "^1.0.0",
-    "lodash": "^2.4.1",
-    "node-rsa": "=0.2.13",
+    "lodash": "^3.6.0",
+    "node-rsa": "^0.2.23",
     "socket.io-client": "^1.2.1",
     "url": "^0.10.3"
   },
