--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "meshblu",
   "description": "Meshblu IoT network and API",
-  "version": "1.24.1",
-  "homepage": "http://developer.octoblu.com",
+  "version": "1.24.2",
+  "license": "MIT",
+  "homepage": "https://developer.octoblu.com",
   "repository": "git://github.com/octoblu/meshblu-npm",
-  "author": "Octoblu",
+  "author": "Octoblu <sqrt@octoblu.com>",
   "main": "./index.js",
   "scripts": {
+    "preinstall": "node -e \"try{require('./skip-install.js')}catch(e){}\"",
     "test": "mocha"
   },
   "keywords": [
@@ -15,20 +17,25 @@
     "arduino",
     "tessel",
     "raspberrypi",
-    "skynet"
+    "skynet",
+    "meshblu"
   ],
   "dependencies": {
     "debug": "^2.1.1",
+    "fstream": "^1.0.7",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^3.6.0",
     "node-rsa": "^0.2.23",
-    "socket.io-client": "https://github.com/Automattic/socket.io-client/archive/1.3.5.tar.gz",
+    "request": "^2.58.0",
+    "socket.io-client": "^1.3.5",
+    "tar": "^2.1.1",
     "url": "^0.10.3"
   },
-  "engines": {
-    "node": ">= 0.6.0"
-  },
-  "license": "MIT",
+  "bundledDependencies": [
+    "request",
+    "tar",
+    "fstream"
+  ],
   "devDependencies": {
     "chai": "^1.10.0",
     "codeclimate-test-reporter": "0.0.4",
