Only build tagged releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
 addons:
   code_climate:
     repo_token: e1261e23abb980b8a5321630d8ddb27cc282d834777060f98cb2472544bea4eb
+branches:
+  only:
+    - "/^v[0-9]/"
 before_script:
 - npm install -g codeclimate-test-reporter
 after_script:
