--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_script:
 - npm install -g codeclimate-test-reporter
 after_script:
 - codeclimate-test-reporter < coverage/lcov.info
+before_deploy:
+- npm run build
 deploy:
 - provider: npm
   skip_cleanup: true
