--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "meshblu",
   "description": "Meshblu IoT network and API",
-  "version": "2.2.0",
+  "version": "2.2.3",
   "license": "MIT",
   "homepage": "https://developer.octoblu.com",
   "repository": "git://github.com/octoblu/meshblu-npm",
   "author": "Octoblu <sqrt@octoblu.com>",
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "preinstall": "node -e \"try{require('./skip-install.js')}catch(e){}\"",
+    "build": "gulp",
     "test": "mocha"
   },
   "keywords": [
@@ -40,6 +41,10 @@
   ],
   "devDependencies": {
     "chai": "^1.10.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-coffee": "^2.3.2",
+    "gulp-concat": "^2.6.0",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0",
     "mocha-istanbul": "^0.2.0",
