--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meshblu",
   "description": "Meshblu IoT network and API",
-  "version": "2.2.7",
+  "version": "2.2.8",
   "license": "MIT",
   "homepage": "https://developer.octoblu.com",
   "repository": "git://github.com/octoblu/meshblu-npm",
@@ -31,6 +31,7 @@
     "node-rsa": "^0.2.23",
     "request": "^2.58.0",
     "socket.io-client": "^1.3.5",
+    "srv-failover": "^1.3.0",
     "tar": "^2.1.1",
     "url": "^0.10.3"
   },
