--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   "dependencies": {
     "backo": "^1.1.0",
     "coffee-script": "^1.10.0",
-    "debug": "^2.1.1",
-    "fstream": "^1.0.7",
+    "debug": "^2.6.3",
+    "fstream": "^1.0.11",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.13.1",
-    "node-rsa": "^0.2.23",
-    "request": "^2.58.0",
+    "node-rsa": "^0.4.2",
+    "request": "^2.81.0",
     "socket.io-client": "^1.3.5",
-    "srv-failover": "^1.3.0",
+    "srv-failover": "^1.3.1",
     "tar": "^2.1.1",
-    "url": "^0.10.3"
+    "url": "^0.11.0"
   },
   "bundledDependencies": [
     "request",
@@ -41,14 +41,15 @@
     "fstream"
   ],
   "devDependencies": {
-    "chai": "^1.10.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "gulp-coffee": "^2.3.2",
+    "gulp-coffee": "^2.3.4",
     "gulp-concat": "^2.6.0",
-    "istanbul": "^0.3.5",
-    "mocha": "^2.1.0",
-    "mocha-istanbul": "^0.2.0",
+    "istanbul": "^0.4.5",
+    "meshblu-config": "^7.0.0",
+    "mocha": "^3.2.0",
+    "mocha-istanbul": "^0.3.0",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.6.0"
   }
